--- a/packages/example/resources/index.html
+++ b/packages/example/resources/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>THREE Particles Fire Example 2</title>
+        <title>THREE.js Particles Fire Example</title>
         <meta charset="utf-8" />
         <meta
             name="viewport"
@@ -20,7 +20,7 @@
                 color: #222;
             }
 
-            #c {
+            #mainCanvas {
                 width: 100%;
                 height: 100%;
                 display: block;
@@ -31,7 +31,7 @@
     </head>
 
     <body>
-        <canvas id="c"></canvas>
+        <canvas id="mainCanvas"></canvas>
         <script src="index.js"></script>
     </body>
 </html>
