--- a/packages/example/resources/index.html
+++ b/packages/example/resources/index.html
@@ -32,6 +32,7 @@
 
     <body>
         <canvas id="mainCanvas"></canvas>
+        <!--suppress HtmlUnknownTarget -->
         <script src="index.js"></script>
     </body>
 </html>
