--- a/packages/example/resources/index.html
+++ b/packages/example/resources/index.html
@@ -7,6 +7,7 @@
             name="viewport"
             content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
         />
+        <link rel="icon" type="image/png" href="favicon.png" />
 
         <style>
             body,
