chore: update build for particle-editor

--- a/resources/index.html
+++ b/resources/index.html
@@ -13,5 +13,6 @@
     <body>
         Coming soon™
         <p><a href="./example">Example</a></p>
+        <p><a href="./particle-editor">Editor</a></p>
     </body>
 </html>
