--- a/packages/example/resources/index.html
+++ b/packages/example/resources/index.html
@@ -33,7 +33,6 @@
 
     <body>
         <canvas id="mainCanvas"></canvas>
-        <!--suppress HtmlUnknownTarget -->
-        <script src="index.js"></script>
+        <script type="module" src="/src/index.ts"></script>
     </body>
 </html>
