--- a/packages/particle-editor/index.html
+++ b/packages/particle-editor/index.html
@@ -1,22 +1,12 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Particle Editor</title>
-        <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
-        />
-        <link rel="icon" type="image/png" href="/favicon.png" />
-
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="theme-color" content="#121212" />
+        <title>Particle Effect Editor</title>
         <style>
-            body,
-            html {
-                margin: 0;
-                width: 100%;
-                height: 100%;
-            }
-
             body {
                 color: #222;
             }
@@ -27,7 +17,6 @@
             }
         </style>
     </head>
-
     <body>
         <div id="root"></div>
         <script type="module" src="/src/index.tsx"></script>
