--- a/packages/particle-editor/index.html
+++ b/packages/particle-editor/index.html
@@ -5,6 +5,7 @@
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="theme-color" content="#121212" />
+        <link rel="icon" type="image/png" href="favicon.svg" />
         <title>Particle Effect Editor</title>
         <style>
             body {
