docs: add plain js example

--- a/www/index.html
+++ b/www/index.html
@@ -7,11 +7,11 @@
             name="viewport"
             content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
         />
-        <link rel="icon" type="image/png" href="favicon.svg" />
+        <link rel="icon" type="image/png" href="./favicon.svg" />
     </head>
 
     <body>
         Coming soon™
-        <p><a href="./example">Example</a></p>
+        <p><a href="./example.html">Example</a></p>
     </body>
 </html>
